# lab-kube-lens

./: .dockerignore  .gitlab-ci.yml  AGENTS.md  Dockerfile  README.md  pyproject.toml
app/analyze/: router.py
app/services/: ai_service.py
data/: knowledge_base.json
scripts/: seed.py
src/app/: dependencies.py  main.py  server.py
src/app/analyze/: models.py  router.py
src/app/services/: ai_service.py
tests/: test_health.py
