[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kube-lens"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "pydantic",
    "pydantic_settings",
    "qdrant_client",
    "requests",
    "uvicorn"
]

[project.optional-dependencies]
dev = [
    "deptry",
    "pytest",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# E: pycodestyle, F: Pyflakes, I: isort, UP: pyupgrade
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.fastapi]
entrypoint = "app.main:app"